--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
       "src": "/(.*)",
       "dest": "index.js"
      }
-    ]
+    ],
+    {
+        "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+      }
    }
